Завершаем методичную разметку личного проекта

--- a/source/photo.html
+++ b/source/photo.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <span class="page-header__logo-name">Pink</span>
+        <img src="https://via.placeholder.com/74x23" class="page-header__logo-name">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -16,7 +16,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a>
+              <a href="index.html">
                 Главная
               </a>
             </li>
@@ -41,78 +41,79 @@
 
     <main class="page-main">
       <section class="intro">
-        <p class="intro__title">Фотографии пользователей</p>
+        <h1 class="intro__title">Фотографии пользователей</h1>
       </section>
       <section class="photos">
         <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Анна </b><span>(5 минут назад)</span><br>
-              Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!
-            </p>
+          <div class="photos__description">
+            <p><b>Анна </b><span>(5 минут назад)</span></p>
+            <p>Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
             <span>Нравится: 215</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Левон </b><span>(5 часов назад)</span><br>
-              Вчера он на луну летал, сегодня в руки к нам попал.
-            </p>
+          <div class="photos__description">
+            <p><b>Левон </b><span>(5 часов назад)</span></p>
+            <p>Вчера он на луну летал, сегодня в руки к нам попал.</p>
             <span>Нравится: 356</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Антон </b><span>(12 часов назад)</span><br>
-              Соседи будут рады!
-            </p>
+          <div class="photos__description">
+            <p><b>Антон </b><span>(12 часов назад)</span></p>
+            <p>Соседи будут рады!</p>
             <span>Нравится: 666</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Борис </b><span>(20 часов назад)</span><br>
-              Здесь могла быть ваша цитата о высоком и вечном.
-            </p>
+          <div class="photos__description">
+            <p><b>Борис </b><span>(20 часов назад)</span></p>
+            <p>Здесь могла быть ваша цитата о высоком и вечном.</p>
             <span>Нравится: 215</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Сергей </b><span>(25 часов назад)</span><br>
-              Самая кубанская в мире!
-            </p>
+          <div class="photos__description">
+            <p>Сергей </b><span>(25 часов назад)</span>
+            <p>Самая кубанская в мире!</p>
             <span>Нравится: 4</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Максим </b><span>(40 часов назад)</span><br>
-              Где снег-то?
-            </p>
+          <div class="photos__description">
+            <p><b>Максим </b><span>(40 часов назад)</span>
+            <p>Где снег-то?</p>
             <span>Нравится: 150</span>
           </div>
         </div>
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
-          <div class="photos__block--description">
-            <p>
-              <b>Надежда </b><span>(45 часов назад)</span><br>
-              Всем GM и взаимные лайки!
-            </p>
+          <div class="photos__description">
+            <p><b>Надежда </b><span>(45 часов назад)</span></p>
+            <p>Всем GM и взаимные лайки!</p>
             <span>Нравится: 2560</span>
+          </div>
+        </div>
+      </section>
+      <section class="editor">
+        <div class="editor__wrapper">
+          <img class="editor__image" src="https://via.placeholder.com/280x374">
+          <div class="editor__options">
+            <img src="https://via.placeholder.com/44x44">
+            <img src="https://via.placeholder.com/48x43">
+            <img src="https://via.placeholder.com/32x32">
+          </div>
+          <input class="editor__range" type="range" id="editor_range" name="editor_range">
+          <div class="editor__buttons">
+            <button class="editor__button" type="button">Запостить</button>
+            <button class="editor__button" type="button">Отмена</button>
           </div>
         </div>
       </section>
@@ -127,13 +128,13 @@
       <section class="page-footer__social">
         <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__item social-list__item--twitter" href="#" aria-label="Перейти в Twitter"></a>
+            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter"></a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__item social-list__item--facebook" href="#" aria-label="Перейти в Facebook"></a>
+            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook"></a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__item social-list__item--youtube" href="#" aria-label="Перейти на Youtube"></a>
+            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube"></a>
           </li>
         </ul>
       </section>
