--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="page-header">
       <a class="page-header__logo">
-        <span class="page-header__logo-name">Pink</span>
+        <img src="https://via.placeholder.com/74x23" class="page-header__logo-name">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -41,7 +41,7 @@
 
     <main class="page-main">
       <section class="intro">
-        <p class="intro__title">Взгляните на жизнь иначе!</p>
+        <h1 class="intro__title">Взгляните на жизнь иначе!</h1>
         <img src="https://via.placeholder.com/320x286">
       </section>
       <section class="download">
@@ -84,7 +84,90 @@
         </ul>
         <img src="https://via.placeholder.com/157x320">
       </section>
-    </main>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
+          <div class="reviews__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </div>
+        </div>
+      </section>
+      <section class="prices">
+        <div class="prices__wrapper slider">
+          <div class="prices__list slider_list">
+            <div class="prices__item slider__item">
+              <dl>
+                <dt>Стандарт</dt>
+                <dd>3,99 USD</dd>
+              </dl>
+              <dl>
+                <dt>Розовый фильтр</dt>
+                <dd><img src="https://via.placeholder.com/31x21"></dd>
+              </dl>
+              <dl>
+                <dt>Смайлики</dt>
+                <dd><img src="https://via.placeholder.com/31x21"></dd>
+              </dl>              <dl>
+                <dt>Комментарии</dt>
+                <dd><img src="https://via.placeholder.com/27x27"></dd>
+              </dl>
+            </div>
+          </div>
+          <div class="prices__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contacts">
+      <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+      <dl class="contacts__list">
+        <dt>Звоните:</dt>
+        <dd><a href="tel:+78125556666">+7 (812) 555-66-66</a></dd>
+        <dt>Пишите:</dt>
+        <dd><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></dd>
+        <dt>Приезжайте в гости:</dt>
+        <dd>ул. Большая Конюшенная, 19/8</dd>
+      </dl>
+    </section>
+    <section class="map">
+      <img src="https://via.placeholder.com/320x200" Alt="Карта">
+    </section>
+  </main>
+
+  <footer class="page-footer">
+    <section class="page-footer__logo">
+      <a class="page-footer__link">
+        <img src="https://via.placeholder.com/145x40" class="page-footer__logo-name">
+      </a>
+    </section>
+    <section class="page-footer__social">
+      <ul class="social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook"></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube"></a>
+        </li>
+      </ul>
+    </section>
+    <section class="page-footer__credits">
+      <span>Разработано</span>
+      <img src="https://via.placeholder.com/27x34">
+    </section>
+  </footer>
 
   </body>
 </html>
