Внес правки после проверки валидатором

--- a/source/form.html
+++ b/source/form.html
@@ -47,12 +47,12 @@
         <p class="form__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         <form action="https://echo.htmlacademy.ru" class="form__field"  method="post">
           <div class="form__block form__block--data">
-            <label class="form__label" for="surname" class="">Фамилия</label>
-            <input class="form__input" type="text" class="" id="surname" name="surname" placeholder="Укажите фамилию *">
-            <label class="form__label" for="name" class="">Имя</label>
-            <input class="form__input" type="text" class="" id="name" name="name" placeholder="Введите ваше имя *">
-            <label class="form__label" for="patronymic" class="">Отчество</label>
-            <input class="form__input" type="text" class="" id="name" name="name" placeholder="Ну и отчество тоже">
+            <label class="form__label" for="surname">Фамилия</label>
+            <input class="form__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию *">
+            <label class="form__label" for="name">Имя</label>
+            <input class="form__input" type="text" id="name" name="name" placeholder="Введите ваше имя *">
+            <label class="form__label" for="patronymic">Отчество</label>
+            <input class="form__input" type="text" id="patronymic" name="patronymic" placeholder="Ну и отчество тоже">
           </div>
           <div class="form__block form__block--achievements">
             <fieldset class="form__achievements">
