--- a/source/photo.html
+++ b/source/photo.html
@@ -80,7 +80,7 @@
         <div class="photos__block">
           <img src="https://via.placeholder.com/280x180">
           <div class="photos__description">
-            <p>Сергей </b><span>(25 часов назад)</span>
+            <b>Сергей </b><span>(25 часов назад)</span>
             <p>Самая кубанская в мире!</p>
             <span>Нравится: 4</span>
           </div>
