--- a/source/form.html
+++ b/source/form.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/74x23" class="page-header__logo-name">
+      <a href="index.html" class="page-header__logo">
+        <img src="img/logo-pink-white-mobile.svg" class="page-header__logo-name">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -40,24 +41,30 @@
     </header>
 
     <main class="page-main">
-      <section class="intro">
+      <section class="intro intro--small">
         <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </section>
       <section class="form">
         <p class="form__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         <form action="https://echo.htmlacademy.ru" class="form__field"  method="post">
           <div class="form__block form__block--data">
-            <label class="form__label" for="surname">Фамилия</label>
-            <input class="form__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию *">
-            <label class="form__label" for="name">Имя</label>
-            <input class="form__input" type="text" id="name" name="name" placeholder="Введите ваше имя *">
-            <label class="form__label" for="patronymic">Отчество</label>
-            <input class="form__input" type="text" id="patronymic" name="patronymic" placeholder="Ну и отчество тоже">
+            <div class="form__input-block">
+              <label class="form__label" for="surname">Фамилия</label>
+              <input class="form__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию *">
+            </div>
+            <div class="form__input-block">
+              <label class="form__label" for="name">Имя</label>
+              <input class="form__input" type="text" id="name" name="name" placeholder="Введите ваше имя *">
+            </div>
+            <div class="form__input-block">
+              <label class="form__label" for="patronymic">Отчество</label>
+              <input class="form__input" type="text" id="patronymic" name="patronymic" placeholder="Ну и отчество тоже">
+            </div>
           </div>
           <div class="form__block form__block--achievements">
-            <fieldset class="form__achievements">
-              <legend class="form__achievements-title">Ваши безбашенные достижения в путешествии</legend>
-              <ul class="form__achievements-list">
+            <fieldset class="form__achievements fieldset">
+              <legend class="form__achievements-title legend">Ваши безбашенные достижения в путешествии</legend>
+              <ul class="form__achievements-list form-list">
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="selfie" name="selfie" checked>
                   <label class="form__achievements-label" for="selfie">Сделал селфи с акулой</label>
@@ -86,15 +93,19 @@
             </fieldset>
           </div>
           <div class="form__block form__block--contacts">
-            <label class="form-label" for="phone">Номер телефона</label>
-            <input class="form-input" type="number" id="phone" name="phone" placeholder="Номер, пожалуйста">
-            <label class="form-label" for="email">Адрес почты</label>
-            <input class="form-input" type="email" id="email" name="email" placeholder="Введите почту *">
+            <div class="form__input-block">
+              <label class="form__label" for="phone">Номер телефона</label>
+              <input class="form__input" type="number" id="phone" name="phone" placeholder="Номер, пожалуйста">
+            </div>
+            <div class="form__input-block">
+              <label class="form__label" for="email">Адрес почты</label>
+              <input class="form__input" type="email" id="email" name="email" placeholder="Введите почту *">
+            </div>
           </div>
           <div class="form__block form__block--apps">
-            <fieldset class="form__apps">
-              <legend class="form__apps-title">С каким приложением путешествовали?</legend>
-              <ul class="form__apps-list">
+            <fieldset class="form__apps fieldset">
+              <legend class="form__apps-title legend">С каким приложением путешествовали?</legend>
+              <ul class="form__apps-list form-list">
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="ios" name="device" checked>
                   <label class="form__apps-label" for="ios">Pink для iOS</label>
@@ -111,35 +122,43 @@
             </fieldset>
           </div>
           <div class="form__block form__block--emotions">
-            <label class="form__label" for="emotions">Опишите свои эмоции</label>
-            <input class="form-input" type="text" id="emotions" name="emotions" placeholder="Можно прям в красках, не стесняясь в выражениях">
+            <div class="form__input-block">
+              <label class="form__label" for="emotions">Опишите свои эмоции</label>
+              <input class="form__input" type="text" id="emotions" name="emotions" placeholder="Можно прям в красках, не стесняясь в выражениях">
+            </div>
+            <button class="form__button" type="submit">Отправить форму</button>
+            <p class="form__required-text"><span>*</span> — обязательные поля</p>
           </div>
         </form>
       </section>
     </main>
 
     <footer class="page-footer">
-      <section class="page-footer__logo">
-        <a class="page-footer__link">
-          <img src="https://via.placeholder.com/145x40" class="page-footer__logo-name">
-        </a>
-      </section>
+      <a class="page-footer__link">
+        <img src="img/logo-pink-blue-mobile.svg" class="page-footer__logo-name">
+      </a>
       <section class="page-footer__social">
         <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter"></a>
+            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
+              <img src="img/icon-twitter.svg">
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook"></a>
+            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook">
+              <img src="img/icon-facebook.svg">
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube"></a>
+            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube">
+              <img src="img/icon-youtube.svg">
+            </a>
           </li>
         </ul>
       </section>
       <section class="page-footer__credits">
         <span>Разработано</span>
-        <img src="https://via.placeholder.com/27x34">
+        <img src="img/htmlacademy.svg" width="27" height="34">
       </section>
     </footer>
 
