--- a/source/index.html
+++ b/source/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/74x23" class="page-header__logo-name">
+      <a>
+        <img src="img/logo-pink-white-mobile.svg">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -42,32 +43,34 @@
     <main class="page-main">
       <section class="intro">
         <h1 class="intro__title">Взгляните на жизнь иначе!</h1>
-        <img src="https://via.placeholder.com/320x286">
+        <img src="img/iphone-hand-mobile@1x.png">
       </section>
       <section class="download">
-        <a class="download__button">Скачать приложение</a>
+        <a href="" class="download__button">Скачать приложение</a>
         <ul class="download__list">
           <li class="download__platform">
             <a class="download__platform download__platform--apple" href="#" aria-label="Скачать в App Store">
-              <img src="https://via.placeholder.com/50x50">
+              <img src="img/logo-apple.svg">
             </a>
           </li>
           <li class="download__platform">
             <a class="download__platform download__platform--android" href="#" aria-label="Скачать в Play Market">
-              <img src="https://via.placeholder.com/50x50">
+              <img src="img/logo-android.svg">
             </a>
           </li>
           <li class="download__platform">
           <a class="download__platform download__platform--windows" href="#" aria-label="Скачать в Microsoft Store">
-              <img src="https://via.placeholder.com/50x50">
+              <img src="img/logo-microsoft.svg">
             </a>
           </li>
         </ul>
         <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </section>
       <section class="features">
-        <p class="features__title">Устали от серости мегаполиса?</p>
-        <p class="features__title">Нам есть что вам предложить!</p>
+        <div class="features__title-block">
+          <p class="features__title">Устали от серости мегаполиса?</p>
+          <p class="features__title">Нам есть что вам предложить!</p>
+        </div>
         <ul class="features__list">
           <li class="features__item">
             <p class="features__item-name">Поднимает настроение</p>
@@ -82,12 +85,12 @@
             <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
           </li>
         </ul>
-        <img src="https://via.placeholder.com/157x320">
+        <img src="img/iphone-screen-mobile@1x.png">
       </section>
       <section class="reviews">
         <div class="reviews__wrapper slider">
-          <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item">
+          <div class="reviews__list">
+            <blockquote class="reviews__item">
               <cite class="reviews__author-name">Николай Петров</cite>
               <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
@@ -100,73 +103,83 @@
         </div>
       </section>
       <section class="prices">
-        <div class="prices__wrapper slider">
-          <div class="prices__list slider_list">
-            <div class="prices__item slider__item">
+        <div class="prices__wrapper prices-slider">
+          <div class="prices__list">
+            <div class="prices__item">
               <dl>
-                <dt>Стандарт</dt>
-                <dd>3,99 USD</dd>
+                <dt class="prices__name">Стандарт</dt>
+                <dd class="prices__amount">3,99 USD</dd>
               </dl>
               <dl>
-                <dt>Розовый фильтр</dt>
-                <dd><img src="https://via.placeholder.com/31x21"></dd>
+                <dt class="prices_advantage">Розовый фильтр</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
               </dl>
               <dl>
-                <dt>Смайлики</dt>
-                <dd><img src="https://via.placeholder.com/31x21"></dd>
+                <dt class="prices_advantage">Смайлики</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
               </dl>              <dl>
-                <dt>Комментарии</dt>
-                <dd><img src="https://via.placeholder.com/27x27"></dd>
+                <dt class="prices_advantage">Комментарии</dt>
+                <dd><img src="img/icon-no.svg"></dd>
               </dl>
             </div>
           </div>
-          <div class="prices__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--current" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
+          <div class="prices__toggles prices-slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle slider__toggle--current" type="button">2</button>
             <button class="slider__toggle" type="button">3</button>
           </div>
         </div>
       </section>
       <section class="contacts">
         <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
-        <dl class="contacts__list">
-          <dt>Звоните:</dt>
-          <dd><a href="tel:+78125556666">+7 (812) 555-66-66</a></dd>
-          <dt>Пишите:</dt>
-          <dd><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></dd>
-          <dt>Приезжайте в гости:</dt>
-          <dd>ул. Большая Конюшенная, 19/8</dd>
-        </dl>
+        <div class="contacts__list">
+          <div class="contacts__item">
+            <p>Звоните:</p>
+            <p><a href="tel:+78125556666">+7 (812) 555-66-66</a></p>
+          </div>
+          <div class="contacts__item">
+            <p>Пишите:</p>
+            <p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+          </div>
+          <div class="contacts__item">
+            <p>Приезжайте в гости:</p>
+            <p><address>ул. Большая Конюшенная, 19/8</address></p>
+          </div>
+        </div>
       </section>
       <section class="map">
-        <img src="https://via.placeholder.com/320x200" Alt="Карта">
+        <img src="img/bg-map-mobile@1x.png" Alt="Карта">
       </section>
     </main>
 
-  <footer class="page-footer">
-    <section class="page-footer__logo">
+    <footer class="page-footer">
       <a class="page-footer__link">
-        <img src="https://via.placeholder.com/145x40" class="page-footer__logo-name">
+        <img src="img/logo-pink-blue-mobile.svg" class="page-footer__logo-name">
       </a>
-    </section>
-    <section class="page-footer__social">
-      <ul class="social-list">
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter"></a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook"></a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube"></a>
-        </li>
-      </ul>
-    </section>
-    <section class="page-footer__credits">
-      <span>Разработано</span>
-      <img src="https://via.placeholder.com/27x34">
-    </section>
-  </footer>
+      <section class="page-footer__social">
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
+              <img src="img/icon-twitter.svg">
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook">
+              <img src="img/icon-facebook.svg">
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube">
+              <img src="img/icon-youtube.svg">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-footer__credits">
+        <span>Разработано</span>
+        <img src="img/htmlacademy.svg" width="27" height="34">
+      </section>
+    </footer>
 
   </body>
 </html>
