--- a/source/photo.html
+++ b/source/photo.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://via.placeholder.com/74x23" class="page-header__logo-name">
+      <a href="index.html" class="page-header__logo">
+        <img src="img/logo-pink-white-mobile.svg" class="page-header__logo-name">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -40,77 +41,81 @@
     </header>
 
     <main class="page-main">
-      <section class="intro">
+      <section class="intro intro--small">
         <h1 class="intro__title">Фотографии пользователей</h1>
       </section>
       <section class="photos">
         <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/panorama-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Анна </b><span>(5 минут назад)</span></p>
+            <p><b>Анна </b><span class="photos__time">(5 минут назад)</span></p>
             <p>Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <span>Нравится: 215</span>
+            <span class="photos__like">Нравится: 215</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-car-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Левон </b><span>(5 часов назад)</span></p>
+            <p><b>Левон </b><span class="photos__time">(5 часов назад)</span></p>
             <p>Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <span>Нравится: 356</span>
+            <span class="photos__like">Нравится: 356</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-drumset-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Антон </b><span>(12 часов назад)</span></p>
+            <p><b>Антон </b><span class="photos__time">(12 часов назад)</span></p>
             <p>Соседи будут рады!</p>
-            <span>Нравится: 666</span>
+            <span class="photos__like">Нравится: 666</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-window-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Борис </b><span>(20 часов назад)</span></p>
+            <p><b>Борис </b><span class="photos__time">(20 часов назад)</span></p>
             <p>Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <span>Нравится: 215</span>
+            <span class="photos__like">Нравится: 215</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-fair-mobile@1x.jpg">
           <div class="photos__description">
-            <b>Сергей </b><span>(25 часов назад)</span>
+            <b>Сергей </b><span class="photos__time">(25 часов назад)</span>
             <p>Самая кубанская в мире!</p>
-            <span>Нравится: 4</span>
+            <span class="photos__like">Нравится: 4</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-pov-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Максим </b><span>(40 часов назад)</span>
+            <p><b>Максим </b><span class="photos__time">(40 часов назад)</span>
             <p>Где снег-то?</p>
-            <span>Нравится: 150</span>
+            <span class="photos__like">Нравится: 150</span>
           </div>
         </div>
         <div class="photos__block">
-          <img src="https://via.placeholder.com/280x180">
+          <img src="img/photo-wing-mobile@1x.jpg">
           <div class="photos__description">
-            <p><b>Надежда </b><span>(45 часов назад)</span></p>
+            <p><b>Надежда </b><span class="photos__time">(45 часов назад)</span></p>
             <p>Всем GM и взаимные лайки!</p>
-            <span>Нравится: 2560</span>
+            <span class="photos__like">Нравится: 2560</span>
           </div>
         </div>
+        <p class="photos__intro">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
       </section>
       <section class="editor">
         <div class="editor__wrapper">
-          <img class="editor__image" src="https://via.placeholder.com/280x374">
+          <img class="editor__image" src="img/photo-road-mobile@1x.jpg">
           <div class="editor__options">
-            <img src="https://via.placeholder.com/44x44">
-            <img src="https://via.placeholder.com/48x43">
-            <img src="https://via.placeholder.com/32x32">
+            <img src="img/icon-editor-crop.svg">
+            <img src="img/icon-editor-fill.svg">
+            <img src="img/icon-editor-diagram-fill.svg" width="32" height="32">
           </div>
-          <input class="editor__range" type="range" id="editor_range" name="editor_range">
+          <div class="editor__range">
+            <div class="editor__scale"></div>
+            <div class="editor__toggle"></div>
+          </div>
           <div class="editor__buttons">
             <button class="editor__button" type="button">Запостить</button>
             <button class="editor__button" type="button">Отмена</button>
@@ -120,27 +125,31 @@
     </main>
 
     <footer class="page-footer">
-      <section class="page-footer__logotype">
-        <a class="page-footer__logo">
-          <span class="page-footer__logo-name">Pink</span>
-        </a>
-      </section>
+      <a class="page-footer__link">
+        <img src="img/logo-pink-blue-mobile.svg" class="page-footer__logo-name">
+      </a>
       <section class="page-footer__social">
         <ul class="social-list">
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter"></a>
+            <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
+              <img src="img/icon-twitter.svg">
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook"></a>
+            <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook">
+              <img src="img/icon-facebook.svg">
+            </a>
           </li>
           <li class="social-list__item">
-            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube"></a>
+            <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube">
+              <img src="img/icon-youtube.svg">
+            </a>
           </li>
         </ul>
       </section>
       <section class="page-footer__credits">
         <span>Разработано</span>
-        <img src="https://via.placeholder.com/27x34">
+        <img src="img/htmlacademy.svg" width="27" height="34">
       </section>
     </footer>
 
