Продолжаем вёрстку с препроцессором

--- a/source/form.html
+++ b/source/form.html
@@ -2,13 +2,14 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a href="index.html" class="page-header__logo">
-        <img src="img/logo-pink-white-mobile.svg" class="page-header__logo-name">
+      <a href="index.html">
+        <img src="img/logo-pink-white-mobile.svg">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -62,8 +63,8 @@
             </div>
           </div>
           <div class="form__block form__block--achievements">
-            <fieldset class="form__achievements fieldset">
-              <legend class="form__achievements-title legend">Ваши безбашенные достижения в путешествии</legend>
+            <fieldset class="form__achievements form__fieldset">
+              <legend class="form__achievements-title form__legend">Ваши безбашенные достижения в путешествии</legend>
               <ul class="form__achievements-list form-list">
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="selfie" name="selfie" checked>
@@ -103,8 +104,8 @@
             </div>
           </div>
           <div class="form__block form__block--apps">
-            <fieldset class="form__apps fieldset">
-              <legend class="form__apps-title legend">С каким приложением путешествовали?</legend>
+            <fieldset class="form__apps form__fieldset">
+              <legend class="form__apps-title form__legend">С каким приложением путешествовали?</legend>
               <ul class="form__apps-list form-list">
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="ios" name="device" checked>
