--- a/source/index.html
+++ b/source/index.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -111,14 +112,14 @@
                 <dd class="prices__amount">3,99 USD</dd>
               </dl>
               <dl>
-                <dt class="prices_advantage">Розовый фильтр</dt>
+                <dt class="prices__advantage">Розовый фильтр</dt>
                 <dd><img src="img/icon-yes.svg"></dd>
               </dl>
               <dl>
-                <dt class="prices_advantage">Смайлики</dt>
+                <dt class="prices__advantage">Смайлики</dt>
                 <dd><img src="img/icon-yes.svg"></dd>
               </dl>              <dl>
-                <dt class="prices_advantage">Комментарии</dt>
+                <dt class="prices__advantage">Комментарии</dt>
                 <dd><img src="img/icon-no.svg"></dd>
               </dl>
             </div>
@@ -143,7 +144,7 @@
           </div>
           <div class="contacts__item">
             <p>Приезжайте в гости:</p>
-            <p><address>ул. Большая Конюшенная, 19/8</address></p>
+            <address>ул. Большая Конюшенная, 19/8</address>
           </div>
         </div>
       </section>
