--- a/source/photo.html
+++ b/source/photo.html
@@ -2,13 +2,14 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
     <header class="page-header">
-      <a href="index.html" class="page-header__logo">
-        <img src="img/logo-pink-white-mobile.svg" class="page-header__logo-name">
+      <a href="index.html">
+        <img src="img/logo-pink-white-mobile.svg">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
