Начинаем верстать адаптивные сетки

--- a/source/index.html
+++ b/source/index.html
@@ -45,54 +45,64 @@
       <section class="intro">
         <h1 class="intro__title">Взгляните на жизнь иначе!</h1>
         <img src="img/iphone-hand-mobile@1x.png">
-      </section>
-      <section class="download">
-        <a href="" class="download__button">Скачать приложение</a>
-        <ul class="download__list">
-          <li class="download__platform">
-            <a class="download__platform download__platform--apple" href="#" aria-label="Скачать в App Store">
-              <img src="img/logo-apple.svg">
-            </a>
-          </li>
-          <li class="download__platform">
-            <a class="download__platform download__platform--android" href="#" aria-label="Скачать в Play Market">
-              <img src="img/logo-android.svg">
-            </a>
-          </li>
-          <li class="download__platform">
-          <a class="download__platform download__platform--windows" href="#" aria-label="Скачать в Microsoft Store">
-              <img src="img/logo-microsoft.svg">
-            </a>
-          </li>
-        </ul>
-        <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        <section class="download">
+          <a href="" class="download__button">Скачать приложение</a>
+          <ul class="download__list">
+            <li class="download__platform">
+              <a class="download__platform download__platform--apple" href="#" aria-label="Скачать в App Store">
+                <img src="img/logo-apple.svg">
+              </a>
+            </li>
+            <li class="download__platform">
+              <a class="download__platform download__platform--android" href="#" aria-label="Скачать в Play Market">
+                <img src="img/logo-android.svg">
+              </a>
+            </li>
+            <li class="download__platform">
+            <a class="download__platform download__platform--windows" href="#" aria-label="Скачать в Microsoft Store">
+                <img src="img/logo-microsoft.svg">
+              </a>
+            </li>
+          </ul>
+          <p class="download__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </section>
       </section>
       <section class="features">
         <div class="features__title-block">
           <p class="features__title">Устали от серости мегаполиса?</p>
           <p class="features__title">Нам есть что вам предложить!</p>
         </div>
-        <ul class="features__list">
-          <li class="features__item">
-            <p class="features__item-name">Поднимает настроение</p>
-            <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-          </li>
-          <li class="features__item">
-            <p class="features__item-name">Меняет мир вокруг</p>
-            <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          </li>
-          <li class="features__item">
-            <p class="features__item-name">Заводит новых друзей</p>
-            <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-          </li>
-        </ul>
-        <img src="img/iphone-screen-mobile@1x.png">
+        <div class="features__list-block">
+          <ul class="features__list">
+            <li class="features__item">
+              <p class="features__item-name">Поднимает настроение</p>
+              <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="features__item">
+              <p class="features__item-name">Меняет мир вокруг</p>
+              <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="features__item">
+              <p class="features__item-name">Заводит новых друзей</p>
+              <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+          <img src="img/iphone-screen-mobile@1x.png">
+        </div>
+      </section>
+      <section class="effect">
+        <div class="effect__description">
+          <p>Эффект на 24 часа!</p>
+          <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <a href="">Узнать больше об исследовании</a>
+        </div>
       </section>
       <section class="reviews">
         <div class="reviews__wrapper slider">
           <div class="reviews__list">
             <blockquote class="reviews__item">
               <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__author-description">25 лет, водитель трамвая</p>
               <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </blockquote>
           </div>
@@ -106,6 +116,42 @@
       <section class="prices">
         <div class="prices__wrapper prices-slider">
           <div class="prices__list">
+            <div class="prices__item first-column">
+              <dl>
+                <dt class="prices__name"></dt>
+                <dd class="prices__amount"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Розовый фильтр</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Смайлики</dt>
+                <dd><img src="img/icon-no.svg"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Комментарии</dt>
+                <dd><img src="img/icon-no.svg"></dd>
+              </dl>
+            </div>
+            <div class="prices__item">
+              <dl>
+                <dt class="prices__name">База</dt>
+                <dd class="prices__amount">1,99 USD</dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Розовый фильтр</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Смайлики</dt>
+                <dd><img src="img/icon-no.svg"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Комментарии</dt>
+                <dd><img src="img/icon-no.svg"></dd>
+              </dl>
+            </div>
             <div class="prices__item">
               <dl>
                 <dt class="prices__name">Стандарт</dt>
@@ -121,6 +167,23 @@
               </dl>              <dl>
                 <dt class="prices__advantage">Комментарии</dt>
                 <dd><img src="img/icon-no.svg"></dd>
+              </dl>
+            </div>
+            <div class="prices__item">
+              <dl>
+                <dt class="prices__name">Анлим</dt>
+                <dd class="prices__amount">9,99 USD</dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Розовый фильтр</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
+              </dl>
+              <dl>
+                <dt class="prices__advantage">Смайлики</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
+              </dl>              <dl>
+                <dt class="prices__advantage">Комментарии</dt>
+                <dd><img src="img/icon-yes.svg"></dd>
               </dl>
             </div>
           </div>
