--- a/source/photo.html
+++ b/source/photo.html
@@ -46,8 +46,10 @@
         <h1 class="intro__title">Фотографии пользователей</h1>
       </section>
       <section class="photos">
-        <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
-        <div class="photos__block">
+        <div class="photos__intro-block">
+          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! <br> Видите, как не хватает ваших?</p>
+        </div>
+        <div class="photos__block photos__block--first">
           <img src="img/panorama-mobile@1x.jpg">
           <div class="photos__description">
             <p><b>Анна </b><span class="photos__time">(5 минут назад)</span></p>
@@ -103,15 +105,17 @@
             <span class="photos__like">Нравится: 2560</span>
           </div>
         </div>
-        <p class="photos__intro">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+        <div class="photos__intro-block">
+          <p class="photos__intro">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
+        </div>
       </section>
       <section class="editor">
-        <div class="editor__wrapper">
-          <img class="editor__image" src="img/photo-road-mobile@1x.jpg">
+        <img class="editor__image" src="img/photo-road-mobile@1x.jpg">
+        <div class="editor__block">
           <div class="editor__options">
             <img src="img/icon-editor-crop.svg">
             <img src="img/icon-editor-fill.svg">
-            <img src="img/icon-editor-diagram-fill.svg" width="32" height="32">
+            <img src="img/icon-editor-fill.svg">
           </div>
           <div class="editor__range">
             <div class="editor__scale"></div>
