--- a/source/form.html
+++ b/source/form.html
@@ -46,7 +46,9 @@
         <h1 class="intro__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </section>
       <section class="form">
-        <p class="form__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+        <div class="form__title-block">
+          <p class="form__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+        </div>
         <form action="https://echo.htmlacademy.ru" class="form__field"  method="post">
           <div class="form__block form__block--data">
             <div class="form__input-block">
@@ -63,9 +65,9 @@
             </div>
           </div>
           <div class="form__block form__block--achievements">
-            <fieldset class="form__achievements form__fieldset">
-              <legend class="form__achievements-title form__legend">Ваши безбашенные достижения в путешествии</legend>
-              <ul class="form__achievements-list form-list">
+            <fieldset class="form__achievements">
+              <legend class="form__achievements-title">Ваши безбашенные достижения в путешествии</legend>
+              <ul class="form__achievements-list">
                 <li class="form__achievements-item">
                   <input class="form__achievements-input" type="checkbox" id="selfie" name="selfie" checked>
                   <label class="form__achievements-label" for="selfie">Сделал селфи с акулой</label>
@@ -104,9 +106,9 @@
             </div>
           </div>
           <div class="form__block form__block--apps">
-            <fieldset class="form__apps form__fieldset">
-              <legend class="form__apps-title form__legend">С каким приложением путешествовали?</legend>
-              <ul class="form__apps-list form-list">
+            <fieldset class="form__apps">
+              <legend class="form__apps-title">С каким приложением путешествовали?</legend>
+              <ul class="form__apps-list">
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="ios" name="device" checked>
                   <label class="form__apps-label" for="ios">Pink для iOS</label>
@@ -125,12 +127,24 @@
           <div class="form__block form__block--emotions">
             <div class="form__input-block">
               <label class="form__label" for="emotions">Опишите свои эмоции</label>
-              <input class="form__input" type="text" id="emotions" name="emotions" placeholder="Можно прям в красках, не стесняясь в выражениях">
+              <input class="form__input form__input--big" type="text" id="emotions" name="emotions" placeholder="Можно прям в красках, не стесняясь в выражениях">
             </div>
-            <button class="form__button" type="submit">Отправить форму</button>
-            <p class="form__required-text"><span>*</span> — обязательные поля</p>
+          </div>
+          <div class="form__block form__block--submit">
+          <button class="form__button" type="submit">Отправить форму</button>
+          <p class="form__required-text"><span>*</span> — обязательные поля</p>
           </div>
         </form>
+        <div class="form__failure-pop-up">
+          <p><b>Что-то пошло не так!</b></p>
+          <p>Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          <button type="button">Ok</button>
+        </div>
+        <div class="form__success-pop-up">
+          <p><b>Ваша заявка отправлена</b></p>
+          <p>Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+          <button type="button">Закрыть окно</button>
+        </div>
       </section>
     </main>
 
