Завершаем вёрстку адаптивных сеток

--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
         <div class="effect__description">
           <p>Эффект на 24 часа!</p>
           <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-          <a href="">Узнать больше об исследовании</a>
+          <a href="#">Узнать больше об исследовании</a>
         </div>
       </section>
       <section class="reviews">
@@ -116,7 +116,7 @@
       <section class="prices">
         <div class="prices__wrapper prices-slider">
           <div class="prices__list">
-            <div class="prices__item first-column">
+            <div class="prices__item">
               <dl>
                 <dt class="prices__name"></dt>
                 <dd class="prices__amount"></dd>
