--- a/source/photo.html
+++ b/source/photo.html
@@ -47,7 +47,7 @@
       </section>
       <section class="photos">
         <div class="photos__intro-block">
-          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи! <br> Видите, как не хватает ваших?</p>
+          <p class="photos__intro">Взгляните на фотографии, которые выкладывают пользователи!&nbspВидите, как не хватает ваших?</p>
         </div>
         <div class="photos__block photos__block--first">
           <img src="img/panorama-mobile@1x.jpg">
@@ -110,7 +110,9 @@
         </div>
       </section>
       <section class="editor">
-        <img class="editor__image" src="img/photo-road-mobile@1x.jpg">
+        <div class="editor__image">
+          <img src="img/photo-road-mobile@1x.jpg">
+        </div>
         <div class="editor__block">
           <div class="editor__options">
             <img src="img/icon-editor-crop.svg">
